@@ -1,3 +1,11 @@
+2004-03-29  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* lib/Makefile,in; Add directx to .PHONY target.
+	* lib/directx/dxerr.c: Remove dependence on mingw runtime. 
+	Don't include stdio.h or tchar.h.
+	Replace _T() macro with TEXT() macro, throughout.
+	Replace, _stprintf with wsprintf, throughout.
+
 2004-03-27  Hosaka Yuji  <hos@tamanegi.org>
 
 	* include/dbt.h (DBT_DEVTYP_DEVICEINTERFACE, DBT_DEVTYP_HANDLE):
